fix: adding word break and wrapping to pre elements to allow for longer code examples to render correctly

--- a/static/css/smigle-lite.css
+++ b/static/css/smigle-lite.css
@@ -210,3 +210,9 @@ article {
   text-align: right;
   display: inline;
 }
+
+pre {
+  /*overflow-x: visible;*/ 
+  white-space: pre-wrap;
+  word-break: break-word; 
+}
